input parsing using graphstream